hard-gists/b3f329868934710fbc81218ce1d6d722/run.log
=== Docker Run Log for b3f329868934710fbc81218ce1d6d722 ===
Started at: Mi 29. Okt 19:25:38 CET 2025

[2025-10-29 19:25:38] START: Running container for b3f329868934710fbc81218ce1d6d722
[2025-10-29 19:25:38] SUCCESS: Container 95ed9ec5cf03f240f6992b373334add8c4ed188ef04a66d197a41bcb0b6eb55b started for b3f329868934710fbc81218ce1d6d722
=== Container logs for b3f329868934710fbc81218ce1d6d722 ===
  File "/snippet.py", line 102
    print self.fmt + ": List error!" % cur_mod
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for b3f329868934710fbc81218ce1d6d722 ===
[2025-10-29 19:25:40] INFO: Container 95ed9ec5cf03f240f6992b373334add8c4ed188ef04a66d197a41bcb0b6eb55b has stopped
